// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs component renders correctly 1`] = `
<div>
  <nav
    aria-label="breadcrumbs"
    class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs-root-1 MuiTypography-body1 MuiTypography-colorTextSecondary"
  >
    <ol
      class="MuiBreadcrumbs-ol"
    >
      <li
        class="MuiBreadcrumbs-li"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-9 MuiButton-text Button-text-10 Breadcrumbs-button-3 Breadcrumbs-link-4 MuiButton-textPrimary"
          href="/tiles"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-12"
          >
            <span
              class="MuiButton-startIcon Button-startIcon-13 MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root Breadcrumbs-icon-5"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            <span
              class="Breadcrumbs-label-6"
            >
              Tiles
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs component renders correctly more than 5 items - small screens 1`] = `
<div>
  <nav
    aria-label="breadcrumbs"
    class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs-root-121 MuiTypography-body1 MuiTypography-colorTextSecondary"
  >
    <ol
      class="MuiBreadcrumbs-ol"
    >
      <li
        class="MuiBreadcrumbs-li"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-129 MuiButton-text Button-text-130 Breadcrumbs-button-123 Breadcrumbs-link-124 MuiButton-textPrimary"
          href="/"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-132"
          >
            <span
              class="Breadcrumbs-label-126"
            >
              BMI Group
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </li>
      <li
        aria-hidden="true"
        class="MuiBreadcrumbs-separator Breadcrumbs-separator-122"
      >
        /
      </li>
      <li
        class="MuiBreadcrumbs-li"
      >
        <p
          class="MuiTypography-root Breadcrumbs-ellipsis-127 Typography-root-149 MuiTypography-body1"
          data-testid="typography"
        >
          ...
        </p>
      </li>
      <li
        aria-hidden="true"
        class="MuiBreadcrumbs-separator Breadcrumbs-separator-122"
      >
        /
      </li>
      <li
        class="MuiBreadcrumbs-li"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-129 MuiButton-text Button-text-130 Breadcrumbs-button-123 Breadcrumbs-link-124 MuiButton-textPrimary"
          href="/ice-cream"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-132"
          >
            <span
              class="Breadcrumbs-label-126"
            >
              Ice Cream
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </li>
      <li
        aria-hidden="true"
        class="MuiBreadcrumbs-separator Breadcrumbs-separator-122"
      >
        /
      </li>
      <li
        class="MuiBreadcrumbs-li"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-129 MuiButton-text Button-text-130 Breadcrumbs-button-123 Breadcrumbs-link-124 MuiButton-textPrimary"
          href="/pizza"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-132"
          >
            <span
              class="Breadcrumbs-label-126"
            >
              Pizza
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs component renders correctly only one item 1`] = `
<div>
  <nav
    aria-label="breadcrumbs"
    class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs-root-29 MuiTypography-body1 MuiTypography-colorTextSecondary"
  >
    <ol
      class="MuiBreadcrumbs-ol"
    />
  </nav>
</div>
`;

exports[`Breadcrumbs component renders dark themed correctly 1`] = `
<div>
  <nav
    aria-label="breadcrumbs"
    class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs-root-37 Breadcrumbs-darkThemed-44 MuiTypography-body1 MuiTypography-colorTextSecondary"
  >
    <ol
      class="MuiBreadcrumbs-ol"
    >
      <li
        class="MuiBreadcrumbs-li"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-45 MuiButton-text Button-text-46 Button-textDarkBg-50 Breadcrumbs-button-39 Breadcrumbs-link-40 MuiButton-textPrimary"
          href="/tiles"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-48"
          >
            <span
              class="MuiButton-startIcon Button-startIcon-49 MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root Breadcrumbs-icon-41"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            <span
              class="Breadcrumbs-label-42"
            >
              Tiles
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs component renders on a large breakpoint 1`] = `
<div>
  <nav
    aria-label="breadcrumbs"
    class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs-root-93 Breadcrumbs-darkThemed-100 MuiTypography-body1 MuiTypography-colorTextSecondary"
  >
    <ol
      class="MuiBreadcrumbs-ol"
    >
      <li
        class="MuiBreadcrumbs-li"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-101 MuiButton-text Button-text-102 Button-textDarkBg-106 Breadcrumbs-button-95 Breadcrumbs-link-96 MuiButton-textPrimary"
          href="/"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-104"
          >
            <span
              class="Breadcrumbs-label-98"
            >
              BMI Group
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </li>
      <li
        aria-hidden="true"
        class="MuiBreadcrumbs-separator Breadcrumbs-separator-94"
      >
        /
      </li>
      <li
        class="MuiBreadcrumbs-li"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-101 MuiButton-text Button-text-102 Button-textDarkBg-106 Breadcrumbs-button-95 Breadcrumbs-link-96 MuiButton-textPrimary"
          href="/products"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-104"
          >
            <span
              class="Breadcrumbs-label-98"
            >
              Products
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </li>
      <li
        aria-hidden="true"
        class="MuiBreadcrumbs-separator Breadcrumbs-separator-94"
      >
        /
      </li>
      <li
        class="MuiBreadcrumbs-li"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-101 MuiButton-text Button-text-102 Button-textDarkBg-106 Breadcrumbs-button-95 Breadcrumbs-link-96 MuiButton-textPrimary"
          href="/tiles"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-104"
          >
            <span
              class="Breadcrumbs-label-98"
            >
              Tiles
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </li>
      <li
        aria-hidden="true"
        class="MuiBreadcrumbs-separator Breadcrumbs-separator-94"
      >
        /
      </li>
      <li
        class="MuiBreadcrumbs-li"
      >
        <button
          class="MuiButtonBase-root MuiButton-root Button-root-101 MuiButton-text Button-text-102 Button-textDarkBg-106 Breadcrumbs-button-95 MuiButton-textPrimary Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label Button-label-104"
          >
            <span>
              Concrete Tiles
            </span>
          </span>
        </button>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs component renders on a small breakpoint 1`] = `
<div>
  <nav
    aria-label="breadcrumbs"
    class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs-root-65 Breadcrumbs-darkThemed-72 MuiTypography-body1 MuiTypography-colorTextSecondary"
  >
    <ol
      class="MuiBreadcrumbs-ol"
    >
      <li
        class="MuiBreadcrumbs-li"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-73 MuiButton-text Button-text-74 Button-textDarkBg-78 Breadcrumbs-button-67 Breadcrumbs-link-68 MuiButton-textPrimary"
          href="/"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-76"
          >
            <span
              class="Breadcrumbs-label-70"
            >
              BMI Group
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </li>
      <li
        aria-hidden="true"
        class="MuiBreadcrumbs-separator Breadcrumbs-separator-66"
      >
        /
      </li>
      <li
        class="MuiBreadcrumbs-li"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-73 MuiButton-text Button-text-74 Button-textDarkBg-78 Breadcrumbs-button-67 Breadcrumbs-link-68 MuiButton-textPrimary"
          href="/products"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-76"
          >
            <span
              class="Breadcrumbs-label-70"
            >
              Products
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </li>
      <li
        aria-hidden="true"
        class="MuiBreadcrumbs-separator Breadcrumbs-separator-66"
      >
        /
      </li>
      <li
        class="MuiBreadcrumbs-li"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-73 MuiButton-text Button-text-74 Button-textDarkBg-78 Breadcrumbs-button-67 Breadcrumbs-link-68 MuiButton-textPrimary"
          href="/tiles"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-76"
          >
            <span
              class="Breadcrumbs-label-70"
            >
              Tiles
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </li>
      <li
        aria-hidden="true"
        class="MuiBreadcrumbs-separator Breadcrumbs-separator-66"
      >
        /
      </li>
      <li
        class="MuiBreadcrumbs-li"
      >
        <button
          class="MuiButtonBase-root MuiButton-root Button-root-73 MuiButton-text Button-text-74 Button-textDarkBg-78 Breadcrumbs-button-67 MuiButton-textPrimary Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label Button-label-76"
          >
            <span>
              Concrete Tiles
            </span>
          </span>
        </button>
      </li>
    </ol>
  </nav>
</div>
`;
